--- a/PROP_MGMNT/src/main/webapp/app/home/home.scss
+++ b/PROP_MGMNT/src/main/webapp/app/home/home.scss
@@ -22,3 +22,22 @@ Main page styles
         background-size: contain;
     }
 }
+
+.propmgmnt {
+    display: inline-block;
+    width: 347px;
+    height: 347px;
+    background: url('../../content/images/MFL2.jpg') no-repeat center top;
+    background-size: contain;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    .heart {
+        background: url('../../content/images/MFL2.jpg') no-repeat center top;
+        background-size: contain;
+    }
+}
