--- a/PROP_MGMNT/src/main/webapp/app/home/home.component.html
+++ b/PROP_MGMNT/src/main/webapp/app/home/home.component.html
@@ -10,6 +10,36 @@
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span *ngIf="account" jhiTranslate="home.logged.message"
                     translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>
+                    <div class="row" class="col-md-6"  >
+                        <canvas baseChart
+                            [data]="monthlydata"
+                            [options]="monthlyChartOptions"
+                            [labels]="monthlyChartLabels"
+                            [legend]="true"
+                            [chartType]="'doughnut'"
+                            >
+                        </canvas>
+                    </div>
+                    <div class="row" class="col-md-6"  >
+                        <canvas baseChart
+                            [data]="yearlydata"
+                            [options]="yearlyChartOptions"
+                            [labels]="monthlyChartLabels"
+                            [legend]="true"
+                            [chartType]="'doughnut'"
+                            >
+                        </canvas>
+                    </div>
+                    <div class="row" class="col-md-6"  >
+                        <canvas baseChart
+                            [data]="barchartdata"
+                            [options]="barChartOptions"
+                            [labels]="barChartLabels"
+                            [legend]="true"
+                            [chartType]="'bar'"
+                            >
+                        </canvas>
+                    </div>
             </div>
 
             <div class="alert alert-warning" *ngSwitchCase="false">
