--- a/PROP_MGMNT/src/main/webapp/app/layouts/main/main.component.html
+++ b/PROP_MGMNT/src/main/webapp/app/layouts/main/main.component.html
@@ -3,9 +3,9 @@
     <router-outlet name="navbar"></router-outlet>
 </div>
 <div class="container-fluid">
-    <div class="card jh-card">
+    <div class="card jh-card main-card-background p-0 m-0">
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
     </div>
-    <jhi-footer></jhi-footer>
+    <!-- <jhi-footer></jhi-footer> -->
 </div>
