--- a/AGM/agm-map/src/app/app.component.html
+++ b/AGM/agm-map/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h3>Angular Google API</h3>
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<agm-map [latitude]="lat" [longitude]="lng">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map #AgmMap [latitude]="lat" [longitude]="lng" (idle)="mapIdle()">
+  <agm-marker *ngFor="let p of markers" [latitude]="p.lat" [longitude]="p.lng"></agm-marker>
 </agm-map>
