--- a/AGM/agm-map/src/app/app.component.html
+++ b/AGM/agm-map/src/app/app.component.html
@@ -1,6 +1,12 @@
-<h3>Angular Google API</h3>
+<!--h3>Angular Google API</h3-->
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<agm-map #AgmMap [latitude]="lat" [longitude]="lng" (idle)="mapIdle()">
+<!--agm-map #AgmMap [latitude]="lat" [longitude]="lng" (idle)="mapIdle()">
   <agm-marker *ngFor="let p of markers" [latitude]="p.lat" [longitude]="p.lng"></agm-marker>
-</agm-map>
+  <agm-direction *ngIf="dir" [origin]="dir.origin" [destination]="dir.destination"></agm-direction>
+</agm-map-->
+
+<!--button type="button" (click)="getDirection()">Get</button-->
+
+
+<app-geocode></app-geocode>
